--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,19 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 86,
    "id": "1eb95880",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "':' expected after dictionary key (3752171646.py, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 12\u001b[0;36m\u001b[0m\n\u001b[0;31m    [1024,2048,2096],\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m ':' expected after dictionary key\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s1dcnn_small_param_grid =  {\n",
     "        \"outer_params\": {\n",
@@ -63,7 +54,7 @@
     "    \n",
     "            \"batch_size\": [8,16,32,64,128],\n",
     "            \"learning_rate\": [0.0001, 0.01],\n",
-    "            \"hidden_size\": [1024,2048,2096],\n",
+    "            \"hidden_size\": [1024,2048,4096],\n",
     "            \"scheduler_factor\": [0.1,0.9],\n",
     "            \"scheduler_patience\": [5,15]\n",
     "        }\n",
@@ -75,11 +66,11 @@
     "            \"early_stopping\": True,\n",
     "            \"shuffle\": True,\n",
     "            \"validation_fraction\": 0.2,\n",
-    "            \"early_stopping_patience\": 10},\n",
+    "            \"early_stopping_patience\": 6},\n",
     "    \n",
     "            \"batch_size\": [256,512,1024,2048],\n",
     "            \"learning_rate\": [0.01, 0.0001],\n",
-    "            \"hidden_size\": [1024,2048,2096],\n",
+    "            \"hidden_size\": [1024,2048,4096],\n",
     "            \"scheduler_factor\": [0.1,0.9],\n",
     "            \"scheduler_patience\": [4,7]\n",
     "        }"
@@ -95,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -146,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -192,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "6ddf4b8d-14a4-44a9-b971-a68161336637",
    "metadata": {},
    "outputs": [],
@@ -202,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -240,6 +231,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "72e96cc2-ab06-4bc0-a35b-2b54f5b5aed1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.cpu_count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "99364e7e-e377-4cd0-9364-535f68fb32c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LightGBM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "1994e417-e992-4166-a4ee-be5216827f5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lightgbm_small_param_grid = {\n",
+    "    \"outer_params\": {\"hyperopt_evals\": 32,\n",
+    "    \"validation_fraction\": 0.2,\n",
+    "    \"early_stopping_rounds\": 100,\n",
+    "    \"verbose\": False},\n",
+    "    \n",
+    "    'num_leaves': [4, 16],\n",
+    "    'max_depth': [4, 10],\n",
+    "    'learning_rate': [0.1, 0.2],\n",
+    "    'n_estimators': [2,3],\n",
+    "\n",
+    "    'min_child_weight': [0.001, 0.01],\n",
+    "    'min_child_samples': [20, 50],\n",
+    "    'subsample': [0.8, 1.0],\n",
+    "    'colsample_bytree': [0.8, 1.0],\n",
+    "    'reg_alpha': [0.0, 5.0],\n",
+    "    'reg_lambda': [0.0, 5.0],\n",
+    "    'suckondeez': [1,2],\n",
+    "}\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "09992c23",
    "metadata": {},
@@ -249,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -312,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -384,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -449,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -507,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -588,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -653,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -719,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -774,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -806,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "37d19711-11dc-465a-9e11-74b6a1b55571",
    "metadata": {},
    "outputs": [],
@@ -838,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -856,6 +904,8 @@
     "    generate_model_template(\"titanic\",\"autoint\", param_grid = autoint_small_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\",\"tabtransformer\", param_grid = tabtransformer_small_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\",\"catboost\", param_grid = catboost_small_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"lightgbm\", param_grid = lightgbm_small_param_grid.copy()),\n",
+    "            \n",
     "\n",
     "    generate_model_template(\"iris\",\"xgb\",param_grid = xgb_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\", \"mlp\",  param_grid = mlp_small_param_grid.copy()),\n",
@@ -870,6 +920,7 @@
     "    generate_model_template(\"iris\",\"autoint\", param_grid = autoint_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\",\"tabtransformer\", param_grid = tabtransformer_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\",\"catboost\", param_grid = catboost_small_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"lightgbm\", param_grid = lightgbm_small_param_grid.copy()),\n",
     "\n",
     "    generate_model_template(\"housing\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
@@ -884,6 +935,7 @@
     "    generate_model_template(\"housing\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\",\"catboost\", param_grid = catboost_small_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"lightgbm\", param_grid = lightgbm_small_param_grid.copy()),\n",
     "\n",
     "            \n",
     "    generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
@@ -947,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
