--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 93,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 94,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 95,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 96,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 97,
    "id": "6ddf4b8d-14a4-44a9-b971-a68161336637",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 98,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 99,
    "id": "72e96cc2-ab06-4bc0-a35b-2b54f5b5aed1",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 100,
    "id": "99364e7e-e377-4cd0-9364-535f68fb32c5",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 101,
    "id": "1994e417-e992-4166-a4ee-be5216827f5a",
    "metadata": {},
    "outputs": [],
@@ -272,19 +272,35 @@
     "    \"early_stopping_rounds\": 100,\n",
     "    \"verbose\": False},\n",
     "    \n",
-    "    'num_leaves': [4, 16],\n",
-    "    'max_depth': [4, 10],\n",
+    "    'num_iterations': [100,500],\n",
+    "    'num_leaves': [28, 31],\n",
+    "    'max_depth': [6, 10],\n",
     "    'learning_rate': [0.1, 0.2],\n",
-    "    'n_estimators': [2,3],\n",
-    "\n",
+    "    'n_estimators': [10,50],\n",
     "    'min_child_weight': [0.001, 0.01],\n",
-    "    'min_child_samples': [20, 50],\n",
+    "    'min_child_samples': [10, 20],\n",
     "    'subsample': [0.8, 1.0],\n",
-    "    'colsample_bytree': [0.8, 1.0],\n",
     "    'reg_alpha': [0.0, 5.0],\n",
-    "    'reg_lambda': [0.0, 5.0],\n",
-    "    'suckondeez': [1,2],\n",
-    "}\n"
+    "    'reg_lambda': [0.0, 5.0]\n",
+    "}\n",
+    "\n",
+    "lightgbm_best_params = {\n",
+    "    \"outer_params\": {\"hyperopt_evals\": 32,\n",
+    "    \"validation_fraction\": 0.2,\n",
+    "    \"early_stopping_rounds\": 100,\n",
+    "    \"verbose\": False},\n",
+    "    \n",
+    "    'num_leaves': 31,\n",
+    "    'max_depth': 6,\n",
+    "    'learning_rate': 0.1,\n",
+    "    'n_estimators': 10,\n",
+    "    'min_child_weight': 0.001,\n",
+    "    'min_child_samples': 4,\n",
+    "    'subsample': 0.8,\n",
+    "    'colsample_bytree': 0.8,\n",
+    "    'reg_alpha': 0.1,\n",
+    "    'reg_lambda': 0.1\n",
+    "}"
    ]
   },
   {
@@ -297,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 102,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -360,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 103,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -432,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 104,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -497,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 105,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -555,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 106,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -636,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 107,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -701,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 108,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -767,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 109,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -822,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 110,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -854,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 111,
    "id": "37d19711-11dc-465a-9e11-74b6a1b55571",
    "metadata": {},
    "outputs": [],
@@ -886,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 112,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -904,7 +920,7 @@
     "    generate_model_template(\"titanic\",\"autoint\", param_grid = autoint_small_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\",\"tabtransformer\", param_grid = tabtransformer_small_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\",\"catboost\", param_grid = catboost_small_param_grid.copy()),\n",
-    "    generate_model_template(\"titanic\",\"lightgbm\", param_grid = lightgbm_small_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"lightgbm\", param_grid = lightgbm_small_param_grid.copy(),  best_params = lightgbm_best_params.copy()),\n",
     "            \n",
     "\n",
     "    generate_model_template(\"iris\",\"xgb\",param_grid = xgb_small_param_grid.copy()),\n",
@@ -920,7 +936,7 @@
     "    generate_model_template(\"iris\",\"autoint\", param_grid = autoint_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\",\"tabtransformer\", param_grid = tabtransformer_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\",\"catboost\", param_grid = catboost_small_param_grid.copy()),\n",
-    "    generate_model_template(\"iris\",\"lightgbm\", param_grid = lightgbm_small_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"lightgbm\", param_grid = lightgbm_small_param_grid.copy(), best_params = lightgbm_best_params.copy()),\n",
     "\n",
     "    generate_model_template(\"housing\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
@@ -935,7 +951,7 @@
     "    generate_model_template(\"housing\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\",\"catboost\", param_grid = catboost_small_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\",\"lightgbm\", param_grid = lightgbm_small_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"lightgbm\", param_grid = lightgbm_small_param_grid.copy(), best_params = lightgbm_best_params.copy()),\n",
     "\n",
     "            \n",
     "    generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
@@ -999,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 113,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
