--- a/notebooks/DatasetsExploration.ipynb
+++ b/notebooks/DatasetsExploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "61d7a5af",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,218 @@
     "#from datasets import load_dataset\n",
     "from factory import create_data_loader\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "053a8757-7328-4c8f-aa6e-d8070dcca122",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(y_train.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f350f4da-3e7f-42ef-936d-6c3f3e4796bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "if isinstance(y_train.iloc[0], float):\n",
+    "    print(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "edf7567c-f248-4151-8add-d5f25e4996d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCCESS creditcard\n",
+      "SUCCESS housing\n",
+      "SUCCESS adult\n",
+      "0 Index([], dtype='object')\n",
+      "SUCCESS heloc\n",
+      "SUCCESS covertype\n",
+      "\n",
+      "Aggregated Dataset Summary:\n",
+      "      Dataset Total Samples Total Features     Target Type Num Classes  \\\n",
+      "0  creditcard         59720             30  Classification           2   \n",
+      "1     housing         20640              9      Regression        None   \n",
+      "2       adult         32561             14  Classification           2   \n",
+      "3       heloc         10459             24  Classification           2   \n",
+      "4   covertype        581011             54  Classification           7   \n",
+      "\n",
+      "  Num Categorical Num Numerical  \n",
+      "0               0            30  \n",
+      "1               0             9  \n",
+      "2               8             6  \n",
+      "3               0            24  \n",
+      "4               0            54  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an empty DataFrame to store dataset summaries\n",
+    "summary_data = pd.DataFrame(columns=['Dataset', 'Total Samples', 'Total Features', \n",
+    "                                     'Target Type', 'Num Classes', 'Num Categorical', 'Num Numerical'])\n",
+    "\n",
+    "# Your data loader loop\n",
+    "loaders = [\n",
+    "    \"creditcard\",\n",
+    "    \"housing\",\n",
+    "    \"adult\",\n",
+    "    \"heloc\",\n",
+    "    \"covertype\"\n",
+    "]\n",
+    "\n",
+    "for dataset_name in loaders:\n",
+    "    try:\n",
+    "        data_loader = create_data_loader(dataset_name, test_size=0.2, normalize_features=\"mean_std\", return_extra_info=True, encode_categorical=False)\n",
+    "        X_train, X_test, y_train, y_test, extra_info = data_loader.load_data()\n",
+    "\n",
+    "        # Calculate additional statistics\n",
+    "        total_samples = X_train.shape[0] + X_test.shape[0]\n",
+    "        total_features = X_train.shape[1]\n",
+    "        \n",
+    "        target_type = 'Classification' if isinstance(y_train.iloc[0], np.int64) else 'Regression'\n",
+    "        num_classes = y_train.nunique() if target_type == 'Classification' else None\n",
+    "        num_categorical = X_train.select_dtypes(include=['object']).shape[1]\n",
+    "        num_numerical = X_train.select_dtypes(include=['number']).shape[1]\n",
+    "\n",
+    "        # Append summary to DataFrame\n",
+    "        # Inside the loop, replace the append line with this line:\n",
+    "        summary_data = pd.concat([summary_data, pd.DataFrame([[dataset_name, total_samples, total_features,\n",
+    "                                                       target_type, num_classes, num_categorical, num_numerical]],\n",
+    "                                                     columns=summary_data.columns)], ignore_index=True)\n",
+    "\n",
+    "        print(\"SUCCESS\", dataset_name)\n",
+    "    except Exception as e:\n",
+    "        print(\"FAIL\", dataset_name)\n",
+    "        print(repr(e))\n",
+    "\n",
+    "# Print aggregated summary\n",
+    "print(\"\\nAggregated Dataset Summary:\")\n",
+    "print(summary_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3277002d-4581-4a3b-aecb-1cc8c812ecd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary_data.to_csv(\"summary_data.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a57ba80c-d51d-49b6-a047-510e8e73e6b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "╒════╤════════════╤═════════════════╤══════════════════╤════════════════╤═══════════════╤═══════════════════╤═════════════════╕\n",
+      "│    │ Dataset    │   Total Samples │   Total Features │ Target Type    │   Num Classes │   Num Categorical │   Num Numerical │\n",
+      "╞════╪════════════╪═════════════════╪══════════════════╪════════════════╪═══════════════╪═══════════════════╪═════════════════╡\n",
+      "│  0 │ creditcard │           59720 │               30 │ Classification │             2 │                 0 │              30 │\n",
+      "├────┼────────────┼─────────────────┼──────────────────┼────────────────┼───────────────┼───────────────────┼─────────────────┤\n",
+      "│  1 │ housing    │           20640 │                9 │ Regression     │               │                 0 │               9 │\n",
+      "├────┼────────────┼─────────────────┼──────────────────┼────────────────┼───────────────┼───────────────────┼─────────────────┤\n",
+      "│  2 │ adult      │           32561 │               14 │ Classification │             2 │                 8 │               6 │\n",
+      "├────┼────────────┼─────────────────┼──────────────────┼────────────────┼───────────────┼───────────────────┼─────────────────┤\n",
+      "│  3 │ heloc      │           10459 │               24 │ Classification │             2 │                 0 │              24 │\n",
+      "├────┼────────────┼─────────────────┼──────────────────┼────────────────┼───────────────┼───────────────────┼─────────────────┤\n",
+      "│  4 │ covertype  │          581011 │               54 │ Classification │             7 │                 0 │              54 │\n",
+      "╘════╧════════════╧═════════════════╧══════════════════╧════════════════╧═══════════════╧═══════════════════╧═════════════════╛\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert DataFrame to ASCII table\n",
+    "ascii_table = tabulate(summary_data, headers='keys', tablefmt='fancy_grid')\n",
+    "\n",
+    "# Print the ASCII table (for preview)\n",
+    "print(ascii_table)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "3d215d6e-a4df-42f4-bf5e-527ff3ba5c7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ImageFont' object has no attribute 'getsize'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m lines \u001b[38;5;241m=\u001b[39m ascii_table\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     13\u001b[0m lines[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\033\u001b[39;00m\u001b[38;5;124m[1m\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlines[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\033\u001b[39;00m\u001b[38;5;124m[0m\u001b[39m\u001b[38;5;124m\"\u001b[39m  \u001b[38;5;66;03m# Make headers bold\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m line_height \u001b[38;5;241m=\u001b[39m \u001b[43mfont\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetsize\u001b[49m(lines[\u001b[38;5;241m0\u001b[39m])[\u001b[38;5;241m1\u001b[39m]  \u001b[38;5;66;03m# Use getsize from PIL directly\u001b[39;00m\n\u001b[1;32m     15\u001b[0m table_width \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(font\u001b[38;5;241m.\u001b[39mgetsize(line)[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m lines)\n\u001b[1;32m     16\u001b[0m table_height \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(lines) \u001b[38;5;241m*\u001b[39m line_height\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ImageFont' object has no attribute 'getsize'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from tabulate import tabulate\n",
+    "from PIL import Image, ImageDraw, ImageFont\n",
+    "\n",
+    "\n",
+    "# Convert DataFrame to ASCII table\n",
+    "ascii_table = tabulate(summary_data, headers='keys', tablefmt='pretty')\n",
+    "\n",
+    "\n",
+    "# Create an image with the ASCII table content\n",
+    "font = ImageFont.load_default()\n",
+    "lines = ascii_table.split('\\n')\n",
+    "lines[0] = f\"\\033[1m{lines[0]}\\033[0m\"  # Make headers bold\n",
+    "line_height = font.getsize(lines[0])[1]  # Use getsize from PIL directly\n",
+    "table_width = max(font.getsize(line)[0] for line in lines)\n",
+    "table_height = len(lines) * line_height\n",
+    "image = Image.new('RGB', (table_width, table_height), color='white')\n",
+    "draw = ImageDraw.Draw(image)\n",
+    "\n",
+    "# Draw the ASCII table content onto the image\n",
+    "y_position = 0\n",
+    "for line in lines:\n",
+    "    draw.text((0, y_position), line, font=font, fill='black')\n",
+    "    y_position += line_height\n",
+    "\n",
+    "# Save the image as a PNG file\n",
+    "image.save('table.png')"
    ]
   },
   {
@@ -31,7 +242,17 @@
     "    \"ageconditions\",\n",
     "    \"adult\",\n",
     "    \"heloc\",\n",
-    "    \"covertype\"]"
+    "    \"covertype\"]\n",
+    "\n",
+    "for i in loaders:\n",
+    "    \n",
+    "    try:\n",
+    "        data_loader = create_data_loader(i, test_size=0.2, normalize_features = \"mean_std\", return_extra_info = True, encode_categorical=False)\n",
+    "        X_train, X_test, y_train, y_test, extra_info = data_loader.load_data()\n",
+    "        print(\"SUCCESS\",i)\n",
+    "    except Exception as e:\n",
+    "        print(\"FAIL\",i)\n",
+    "        print (repr(e))"
    ]
   },
   {
