--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "id": "6ddf4b8d-14a4-44a9-b971-a68161336637",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "id": "72e96cc2-ab06-4bc0-a35b-2b54f5b5aed1",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "id": "99364e7e-e377-4cd0-9364-535f68fb32c5",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "id": "1994e417-e992-4166-a4ee-be5216827f5a",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 11,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 12,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 14,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 15,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 16,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -783,20 +783,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 17,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "autoint_large_param_grid = {\n",
-    "\"outer_params\": {\"hyperopt_evals\": 32,\n",
+    "autoint_large_param_grid ={\n",
+    "\"outer_params\": {\"hyperopt_evals\": 64,\n",
     "                \"auto_lr_find\": False,\n",
     "                \"max_epochs\": 1000,\n",
     "                \"val_size\": 0.2,\n",
     "                \"early_stopping_patience\": 6},\n",
     "\n",
-    "    \"batch_size\": [256,512,1024,2048],\n",
+    "    \"batch_size\": [128,256,512,1024,2048],\n",
     "    \"learning_rate\": [0.001, 0.0001],\n",
+    "    #'attn_embed_dim': [32, 16, 64],\n",
+    "    #'num_heads': [2, 4],\n",
+    "    'num_attn_blocks': [3, 2, 4],\n",
+    "    'attn_dropouts': [0.0, 0.1, 0.3],\n",
+    "    'has_residuals': [True, False],\n",
+    "    #'embedding_dim': [16, 8, 32],\n",
+    "    'embedding_initialization': ['kaiming_uniform', 'kaiming_normal'],\n",
+    "    'embedding_bias': [True, False],\n",
+    "    'share_embedding': [True, False],\n",
+    "    'share_embedding_strategy': ['add', 'fraction'],\n",
+    "    'shared_embedding_fraction': [0.25, 0.1, 0.5],\n",
+    "    'deep_layers': [True, False],\n",
+    "    'layers': ['128-64-32', '64-32', '256-128-64'],\n",
+    "    'activation': ['ReLU', 'LeakyReLU', 'Tanh'],\n",
+    "    'initialization': ['kaiming', 'xavier', 'random'],\n",
+    "    'dropout': [0.0, 0.2, 0.0],\n",
+    "    'attention_pooling': [True, False],\n",
     "    \n",
     "\"optimizer_fn\": {\n",
     "        \"Adam\": {\"weight_decay\": [0.0001, 0.01]},\n",
@@ -809,14 +826,31 @@
     "\n",
     "\n",
     "autoint_small_param_grid ={\n",
-    "\"outer_params\": {\"hyperopt_evals\": 32,\n",
+    "\"outer_params\": {\"hyperopt_evals\": 128,\n",
     "                \"auto_lr_find\": False,\n",
-    "                \"max_epochs\": 1000,\n",
+    "                \"max_epochs\": 10,\n",
     "                \"val_size\": 0.2,\n",
-    "                \"early_stopping_patience\": 6},\n",
+    "                \"early_stopping_patience\": 3},\n",
     "\n",
     "    \"batch_size\": [8,16,32,64],\n",
     "    \"learning_rate\": [0.001, 0.0001],\n",
+    "    #'attn_embed_dim': [32, 16, 64],\n",
+    "    #'num_heads': [2, 4],\n",
+    "    'num_attn_blocks': [3, 2, 4],\n",
+    "    'attn_dropouts': [0.0, 0.1, 0.3],\n",
+    "    'has_residuals': [True, False],\n",
+    "    #'embedding_dim': [16, 8, 32],\n",
+    "    'embedding_initialization': ['kaiming_uniform', 'kaiming_normal'],\n",
+    "    'embedding_bias': [True, False],\n",
+    "    'share_embedding': [True, False],\n",
+    "    'share_embedding_strategy': ['add', 'fraction'],\n",
+    "    'shared_embedding_fraction': [0.25, 0.1, 0.5],\n",
+    "    'deep_layers': [True, False],\n",
+    "    'layers': ['128-64-32', '64-32', '256-128-64'],\n",
+    "    'activation': ['ReLU', 'LeakyReLU', 'Tanh'],\n",
+    "    'initialization': ['kaiming', 'xavier', 'random'],\n",
+    "    'dropout': [0.0, 0.2, 0.0],\n",
+    "    'attention_pooling': [True, False],\n",
     "    \n",
     "\"optimizer_fn\": {\n",
     "        \"Adam\": {\"weight_decay\": [0.0001, 0.01]},\n",
@@ -838,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 18,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -870,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 19,
    "id": "37d19711-11dc-465a-9e11-74b6a1b55571",
    "metadata": {},
    "outputs": [],
@@ -902,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 20,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -938,6 +972,23 @@
     "    generate_model_template(\"iris\",\"catboost\", param_grid = catboost_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\",\"lightgbm\", param_grid = lightgbm_small_param_grid.copy(), best_params = lightgbm_best_params.copy()),\n",
     "\n",
+    "\n",
+    "    generate_model_template(\"breastcancer\",\"xgb\",param_grid = xgb_small_param_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\", \"mlp\",  param_grid = mlp_small_param_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\", \"resnet18\", param_grid = resnet_small_param_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\", \"s1dcnn\", param_grid = s1dcnn_small_param_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\", \"tabnet\",param_grid = tabnet_small_param_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\", \"gate\", param_grid = gate_small_param_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\",\"fttransformer\", param_grid = fttransformer_small_param_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\", \"categoryembedding\", param_grid = catembed_small_param_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\",\"gandalf\", param_grid = gandalf_small_param_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\",\"node\", param_grid = node_small_param_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\",\"autoint\", param_grid = autoint_small_param_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\",\"tabtransformer\", param_grid = tabtransformer_small_param_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\",\"catboost\", param_grid = catboost_small_param_grid.copy()),\n",
+    "    generate_model_template(\"breastcancer\",\"lightgbm\", param_grid = lightgbm_small_param_grid.copy(), best_params = lightgbm_best_params.copy()),\n",
+    "\n",
+    "            \n",
     "    generate_model_template(\"housing\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
@@ -1015,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 21,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
