--- a/notebooks/ExplorationBook.ipynb
+++ b/notebooks/ExplorationBook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "abd838c3",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "314c7d7f-4b12-46e1-abf1-273120bc4789",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "3f0405c2",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "b9161df4",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "9e4f9922",
    "metadata": {},
    "outputs": [
@@ -112,125 +112,77 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>iris</td>\n",
-       "      <td>resnet18</td>\n",
-       "      <td>9.490582</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'batch_size': 35, 'learning_rate': 0.00028109...</td>\n",
-       "      <td>{'accuracy': 0.6842105263157895, 'f1': 0.57617...</td>\n",
-       "      <td>[2, 0, 2, 2, 2, 0, 0, 0, 0, 2]</td>\n",
-       "      <td>0.576177</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.684211</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>iris</td>\n",
-       "      <td>resnet18</td>\n",
-       "      <td>5.245430</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'batch_size': 35, 'learning_rate': 0.00028109...</td>\n",
-       "      <td>{'accuracy': 0.6842105263157895, 'f1': 0.57617...</td>\n",
-       "      <td>[2, 0, 2, 2, 2, 0, 0, 0, 0, 2]</td>\n",
-       "      <td>0.576177</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.684211</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>iris</td>\n",
+       "      <th>5</th>\n",
+       "      <td>housing</td>\n",
        "      <td>categoryembedding</td>\n",
-       "      <td>8.778228</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'AdamW_weight_decay': 0.00028961319481715273,...</td>\n",
-       "      <td>{'accuracy': 0.9736842105263158, 'f1': 0.97368...</td>\n",
-       "      <td>[2, 0, 2, 1, 2, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.973684</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.973684</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>655.336698</td>\n",
+       "      <td>r2_score</td>\n",
+       "      <td>{'AdamW_weight_decay': 0.0025488672153250813, ...</td>\n",
+       "      <td>{'mse': 0.3910003376579559, 'rmse': 0.62530019...</td>\n",
+       "      <td>[1.9481786, 2.711327, 0.84492445, 2.8169293, 1...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.391000</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>0.706610</td>\n",
+       "      <td>0.625300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>iris</td>\n",
-       "      <td>categoryembedding</td>\n",
-       "      <td>8.542132</td>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>{'AdamW_weight_decay': 0.00028961319481715273,...</td>\n",
-       "      <td>{'accuracy': 0.9736842105263158, 'f1': 0.97368...</td>\n",
-       "      <td>[2, 0, 2, 1, 2, 0, 0, 0, 0, 1]</td>\n",
-       "      <td>0.973684</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.973684</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <th>4</th>\n",
+       "      <td>housing</td>\n",
+       "      <td>resnet18</td>\n",
+       "      <td>3833.859957</td>\n",
+       "      <td>r2_score</td>\n",
+       "      <td>{'batch_size': 1540, 'learning_rate': 0.000138...</td>\n",
+       "      <td>{'mse': 0.4255921008653211, 'rmse': 0.65237420...</td>\n",
+       "      <td>[array([1.592662], dtype=float32), array([2.64...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.425592</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>0.680654</td>\n",
+       "      <td>0.652374</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  dataset              model  run_time eval_metric  \\\n",
-       "0    iris           resnet18  9.490582    accuracy   \n",
-       "2    iris           resnet18  5.245430    accuracy   \n",
-       "1    iris  categoryembedding  8.778228    accuracy   \n",
-       "3    iris  categoryembedding  8.542132    accuracy   \n",
+       "   dataset              model     run_time eval_metric  \\\n",
+       "5  housing  categoryembedding   655.336698    r2_score   \n",
+       "4  housing           resnet18  3833.859957    r2_score   \n",
        "\n",
        "                                         best_params  \\\n",
-       "0  {'batch_size': 35, 'learning_rate': 0.00028109...   \n",
-       "2  {'batch_size': 35, 'learning_rate': 0.00028109...   \n",
-       "1  {'AdamW_weight_decay': 0.00028961319481715273,...   \n",
-       "3  {'AdamW_weight_decay': 0.00028961319481715273,...   \n",
+       "5  {'AdamW_weight_decay': 0.0025488672153250813, ...   \n",
+       "4  {'batch_size': 1540, 'learning_rate': 0.000138...   \n",
        "\n",
        "                                      output_metrics  \\\n",
-       "0  {'accuracy': 0.6842105263157895, 'f1': 0.57617...   \n",
-       "2  {'accuracy': 0.6842105263157895, 'f1': 0.57617...   \n",
-       "1  {'accuracy': 0.9736842105263158, 'f1': 0.97368...   \n",
-       "3  {'accuracy': 0.9736842105263158, 'f1': 0.97368...   \n",
+       "5  {'mse': 0.3910003376579559, 'rmse': 0.62530019...   \n",
+       "4  {'mse': 0.4255921008653211, 'rmse': 0.65237420...   \n",
        "\n",
-       "                      debug_preds        f1   mse  accuracy recall precision  \\\n",
-       "0  [2, 0, 2, 2, 2, 0, 0, 0, 0, 2]  0.576177  None  0.684211   None      None   \n",
-       "2  [2, 0, 2, 2, 2, 0, 0, 0, 0, 2]  0.576177  None  0.684211   None      None   \n",
-       "1  [2, 0, 2, 1, 2, 0, 0, 0, 0, 1]  0.973684  None  0.973684   None      None   \n",
-       "3  [2, 0, 2, 1, 2, 0, 0, 0, 0, 1]  0.973684  None  0.973684   None      None   \n",
+       "                                         debug_preds  f1       mse  accuracy  \\\n",
+       "5  [1.9481786, 2.711327, 0.84492445, 2.8169293, 1... NaN  0.391000       NaN   \n",
+       "4  [array([1.592662], dtype=float32), array([2.64... NaN  0.425592       NaN   \n",
        "\n",
-       "    auc area_under_pr r2_score  rmse  \n",
-       "0  None          None     None  None  \n",
-       "2  None          None     None  None  \n",
-       "1  None          None     None  None  \n",
-       "3  None          None     None  None  "
+       "  recall precision   auc area_under_pr  r2_score      rmse  \n",
+       "5   None      None  None          None  0.706610  0.625300  \n",
+       "4   None      None  None          None  0.680654  0.652374  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Specify the metric you want to maximize\n",
-    "metric_to_maximize = 'f1'\n",
+    "metric_to_maximize = 'mse'\n",
     "tomax = {\"f1\": True,\n",
     "         \"mse\": False,\n",
     "         \"accuracy\": True,\n",
